<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">park</string>
    <string name="parksavvy">ParkSavvy</string>
    <string name="search">Search</string>
    <string name="date">Date</string>
    <string name="_9_00_pm">9.00 PM</string>
    <string name="date2">Date</string>
    <string name="_7_00_am">7.00 AM</string>
    <string name="textview">TextView</string>
    <string name="san_fransisco_france">San Fransisco, France</string>
    <string name="location">location</string>
    <string name="todo">TODO</string>
    <string name="Start">Start</string>
    <string name="End">End</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="profile_fragment">profile_fragment</string>
    <string name="notification_fragment">notification_fragment</string>
    <string name="let_s_park">Let\'s Park</string>
    <string name="see_all">See all</string>
    <string name="arrow">arrow</string>
    <string name="mall">mall</string>
    <string name="pothys">Pothys</string>
    <string name="jipmer">Jipmer</string>
    <string name="todo1">TODO1</string>
    <string name="todo12">TODO</string>
    <string name="todo3">TODO</string>
    <string name="_0_31m_away">0.31m away</string>
    <string name="hotel">hotel</string>
    <string name="bookings">Bookings</string>
    <string name="personal">Personal</string>
    <string name="account_settings">Account Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="todo10">TODO</string>
    <string name="floor_1">FLOOR 1</string>
    <string name="floor_2">FLOOR 2</string>
    <string name="floor_3">FLOOR 3</string>
    <string name="floor_4">FLOOR 4</string>
    <string name="entry">ENTRY</string>
    <string name="exit">EXIT</string>
    <string name="proceed_with_floor_1">PROCEED WITH FLOOR 1</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="car_plate_number">car plate number</string>
    <string name="register">register</string>
    <string name="_1234567890">1234567890</string>
    <string name="get_otp">get_otp</string>
    <string name="_12345678900">1234567890</string>
    <string name="otp_verification">otp_verification</string>
    <string name="we_will_send_you_an_one_time_password_on_this_number">we_will_send_you_an_one_time_password_on_this_number</string>
    <string name="mobile_number">mobile_number</string>
    <string name="_91">+91-</string>
    <string name="enter_the_otp">enter_the_otp</string>
    <string name="didn_t_receive_otp">didn_t_receive_otp</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="verify">verify</string>
    <string name="book">BOOK</string>
    <string name="select_time">SELECT TIME</string>
    <string name="select_time1">SELECT TIME</string>
    <string name="start_hour">START HOUR</string>
    <string name="end_hour">END HOUR</string>
    <string name="time">TIME</string>
    <string name="booking_details">BOOKING DETAILS</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="vehicle_model">vehicle_model</string>
    <string name="vehicle_name">vehicle_name</string>
    <string name="hotelS">HOTEL</string>
    <string name="no_10_xys_street">No 10,xys street</string>
    <string name="rs_10">Rs.10</string>
    <string name="_10rs_hour">10rs/hour</string>
    <string name="_14_april">14-april</string>
    <string name="duration">Duration</string>
    <string name="_2_hours">2 hours</string>
    <string name="vehicle">Vehicle</string>
    <string name="benz">BENZ</string>
    <string name="hours">Hours</string>
    <string name="_9am_11am">9AM - 11AM</string>
    <string name="parking_slot">Parking Slot</string>
    <string name="_1st_floor_b1">1st floor B1</string>
    <string name="price_per_hour">Price (per hour)</string>
    <string name="_10_rs">10.RS</string>
    <string name="gst">Gst</string>
    <string name="_5_rs">5.rs</string>
    <string name="total_price">Total price</string>
    <string name="_20_rs">20.rs</string>
    <string name="download">download</string>
    <string name="todo21">TODO</string>
</resources>