<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".confirmation"
    android:padding="30dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="360dp"
        android:layout_height="139dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="128dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="216dp"
                android:layout_marginBottom="0dp"
                android:src="@drawable/hotel" />

            <TextView
                android:layout_width="195dp"
                android:layout_height="33dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="153dp"
                android:layout_marginTop="27dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="79dp"
                android:text="@string/hotelS"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="195dp"
                android:layout_height="33dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="155dp"
                android:layout_marginTop="69dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="37dp"
                android:text="@string/no_10_xys_street"
                android:textSize="18sp" />

            <TextView
                android:layout_width="195dp"
                android:layout_height="33dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="155dp"
                android:layout_marginTop="102dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="4dp"
                android:text="@string/_10rs_hour"
                android:textStyle="bold"
                android:textSize="25sp" />
        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="360dp"
        android:layout_height="439dp"
        android:layout_marginTop="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="139dp"
                android:layout_height="34dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="209dp"
                android:layout_marginBottom="370dp"
                android:text="@string/date"
                android:textSize="20sp" />

            <TextView
                android:layout_width="145dp"
                android:layout_height="37dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="191dp"
                android:layout_marginTop="34dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="368dp"
                android:text="@string/_14_april"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="156dp"
                android:layout_height="37dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="83dp"
                android:layout_marginEnd="194dp"
                android:layout_marginBottom="319dp"
                android:text="@string/duration"
                android:textSize="20sp" />

            <TextView
                android:layout_width="149dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="189dp"
                android:layout_marginTop="82dp"
                android:layout_marginEnd="22dp"
                android:layout_marginBottom="317dp"
                android:text="@string/_2_hours"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="147dp"
                android:layout_height="27dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="135dp"
                android:layout_marginEnd="201dp"
                android:layout_marginBottom="277dp"
                android:text="@string/vehicle"
                android:textSize="20sp" />

            <TextView
                android:layout_width="151dp"
                android:layout_height="37dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="191dp"
                android:layout_marginTop="137dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="265dp"
                android:text="@string/benz"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="145dp"
                android:layout_height="25dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="177dp"
                android:layout_marginEnd="203dp"
                android:layout_marginBottom="237dp"
                android:text="@string/hours"
                android:textSize="20sp" />

            <TextView
                android:layout_width="153dp"
                android:layout_height="43dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="191dp"
                android:layout_marginTop="179dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="217dp"
                android:text="@string/_9am_11am"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="149dp"
                android:layout_height="29dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="223dp"
                android:layout_marginEnd="201dp"
                android:layout_marginBottom="187dp"
                android:text="@string/parking_slot"
                android:textSize="20sp" />

            <TextView
                android:layout_width="151dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="191dp"
                android:layout_marginTop="227dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="172dp"
                android:text="@string/_1st_floor_b1"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="338dp"
                android:layout_height="104dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="222dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="113dp"
                android:src="@drawable/bg_horizontal_dotted_line"
                android:contentDescription="@string/todo21" />

            <TextView
                android:layout_width="149dp"
                android:layout_height="29dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="295dp"
                android:layout_marginEnd="199dp"
                android:layout_marginBottom="115dp"
                android:text="@string/price_per_hour"
                android:textSize="20sp" />

            <TextView
                android:layout_width="147dp"
                android:layout_height="35dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="191dp"
                android:layout_marginTop="290dp"
                android:layout_marginEnd="22dp"
                android:layout_marginBottom="114dp"
                android:text="@string/_10_rs"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="149dp"
                android:layout_height="29dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="335dp"
                android:layout_marginEnd="199dp"
                android:layout_marginBottom="75dp"
                android:text="@string/gst"
                android:textSize="20sp" />

            <TextView
                android:layout_width="147dp"
                android:layout_height="35dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="196dp"
                android:layout_marginTop="330dp"
                android:layout_marginEnd="17dp"
                android:layout_marginBottom="74dp"
                android:text="@string/_5_rs"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="168dp"
                android:layout_height="29dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="369dp"
                android:layout_marginEnd="180dp"
                android:layout_marginBottom="41dp"
                android:text="@string/total_price"
                android:textSize="20sp" />

            <TextView
                android:layout_width="147dp"
                android:layout_height="35dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="197dp"
                android:layout_marginTop="366dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="38dp"
                android:text="@string/_20_rs"
                android:textSize="25sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/button2"
        android:layout_width="298dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="#6543E4"
        android:text="@string/download"
        android:textStyle="bold" />


</LinearLayout>