<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6913F3"
    tools:context=".vehicle_info">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="79dp"
        android:layout_height="74dp"
        android:padding="8dp"
        android:rotationX="-4"
        android:rotationY="176"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.009"
        app:srcCompat="@android:drawable/ic_media_play"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="306dp"
        android:layout_height="82dp"
        android:text="@string/vehicle_details"
        android:textColor="@color/white"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.009" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:theme="@style/custom_card_view_style"
        app:cardCornerRadius="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="UnknownId">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="438dp"
            android:layout_height="562dp">

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="409dp"
                android:layout_height="72dp"
                android:background="@color/edit_text_background"
                android:drawableStart="@drawable/baseline_directions_car_24"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/vehicle_name"
                android:inputType="text"
                android:padding="8dp"
                android:textSize="25sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.235"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="464dp"
                android:layout_height="70dp"
                android:background="@color/edit_text_background"
                android:drawableStart="@drawable/baseline_directions_car_24"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/vehicle_model"
                android:inputType="text"
                android:padding="8dp"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addbtn2"
                android:layout_width="235dp"
                android:layout_height="76dp"
                android:background="#6913F3"
                android:paddingStart="16dp"
                android:text="BOOK NOW"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.901"
                tools:ignore="HardcodedText,RtlSymmetry" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>